清理server中的警告代码 (#206)